--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 						</div>
 						<div class="cards-entity-address cards-strong">
 							<div class="cards-text-truncate-and-wrap">
-								<span>1219 Rue Crescent</span>
+								<span data-bind="text: AddressStreet"></span>
 							</div>
 							<div class="cards-text-truncate-and-wrap">
-								<span>Montréal, QC H3G 2B1</span>
+								<span data-bind="text: AddressCity"></span>
 							</div>
 						</div>
 					</div>
@@ -169,13 +169,9 @@
 			<div class="cards-entity-right">
 				<div class="hideable-element">
 					<div class="cards-entity-icons cards-disable-text-selection">
-						<a class="cards-icon-link cards-directions-icon" href="javascript:void(0)">
-							<span class="cards-text-truncate-and-wrap">Directions</span>
-						</a>
 						<span class="vertical-divider"></span>
-						<a class="cards-icon-link cards-entity-star-icon" href="javascript:void(0)">
-							<span class="cards-text-truncate-and-wrap">Save</span>
-						</a>
+						<div class="typicons-compass compass" data-bind="attr: { style: BearingStyle }"></div>
+						<span data-bind="text: Math.ceil(Distance()) + ' km'"></span>
 					</div>
 					<hr class="cards-entity-horizontal-line horizontal-line">
 					<div class="cards-entity-url">
