--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="author" content="Philippe Lavoie" />
 	<meta name="description" content="App to find the closest microbrewery from you. By Philippe Lavoie" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 	<!-- OpenGraph -->
 	<meta property="og:title" content="Houblon va?" />
 	<meta property="og:description" content="App to find the closest microbrewery from you. By Philippe Lavoie" />
