Fixed le box-shadow pour WebKit mobile, on check si l'ajout de la girouette va faire choquer le tout.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 					</div>
 				</div>
 			</div>
-			<!--<div class="cards-entity-right">
+			<div class="cards-entity-right">
 				<div class="float-left compass">
 					<div class="typicons-compass compass-icon" data-bind="attr: { style: BearingStyle }"></div>
 					<span data-bind="text: Math.ceil(Distance()) + ' km'"></span>
@@ -184,7 +184,7 @@
 				<div class="fclear-left cards-entity-url">
 					<a target="_blank" class="url" data-bind="text: FormattedPhoneNumber, attr: {href: 'tel:' + InternationalPhoneNumber().replace(' ', '-')}"></a>
 				</div>
-			</div>-->
+			</div>
 		</div>
 	</div>
 </div>
