--- a/index.html
+++ b/index.html
@@ -60,12 +60,19 @@
 
 	<!-- Menu -->
 	<div class="header">
-		<img class="logo float-left" src="img/logo114.png"/>
+		<!-- <img class="logo float-left" src="img/logo114.png"/> -->
 		<div class="float-left">
 			<h1 class="title float-left">Houblon va?</h1>
 			<!-- <a href="https://play.google.com/store/apps/details?id=com.philippelavoie.houblonva">
 				<img class="android-play fclear-left" src="http://developer.android.com/images/brand/en_app_rgb_wo_45.png" title="Application Android disponible sur le Play Store"/>
 			</a> -->
+		</div>
+		<div class="filters-container">
+			<div class="filters">
+				<div class="filter">Micro</div>
+				<div class="filter">Pub</div>
+				<div class="filter">Marché</div>
+			</div>
 		</div>
 	</div>
 	<div id="left-col" class="float-left"> 
