Fix the header for mobile, make some test.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
         <!-- Menu -->
         <div class="header">
-            <div class="float-left">
-                <img class="logo float-left" src="img/logo114.png" height="70"/> 
-                <h1 class="title float-left">Houblon va?</h1>
+            <div class="float-left title">
+                <img class="logo float-left" src="img/logo114.png"/> 
+                <h1 class="float-left">Houblon va?</h1>
             </div>
             <div class="filters-container">
                 <div class="filters">
