Try to fix JSONP

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
         <meta name="author" content="Philippe Lavoie" />
-        <meta name="description" content="App to find the closest microbrewery from you. By Philippe Lavoie" />
+        <meta name="description" content="Application pour trouver la microbrasserie la plus proche de soi. Par Philippe Lavoie" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
         <!-- OpenGraph -->
         <meta property="og:title" content="Houblon va?" />
-        <meta property="og:description" content="App to find the closest microbrewery from you. By Philippe Lavoie" />
+        <meta property="og:description" content="Application pour trouver la microbrasserie la plus proche de soi. Par Philippe Lavoie" />
         <meta property="og:image" content="http://houblonva.philippelavoie.com/img/logo.png"/>
         <meta property="og:url" content="http://houlbonva.philippelavoie.com" />
 
         <!-- Google+ -->
         <meta itemprop="name" content="Houlbon va?">
-        <meta itemprop="description" content="App to find the closest microbrewery from you. By Philippe Lavoie">
+        <meta itemprop="description" content="Application pour trouver la microbrasserie la plus proche de soi. Par Philippe Lavoie">
 
         <title>Houblon va?</title>
 
