--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <script type="text/javascript" src="js/knockout-3.0.0.js"></script>
         <script type="text/javascript" src="js/underscore-min.js"></script>
         <script type="text/javascript" src="js/modernizr-2.6.2.js"></script>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaUQx--3FKjMdOwlg4C3Fdyau3B1XpGTo&sensor=false"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBaUQx--3FKjMdOwlg4C3Fdyau3B1XpGTo"></script>
 
         <script type="text/javascript" src="js/PlaceViewModel.js"></script>
         <script type="text/javascript" src="js/HoublonVaViewModel.js"></script>
