--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <title>Houblon va?</title>
 
         <!-- Web Font -->
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 
         <!-- Styles (CSS) -->
         <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" > -->
