Small edit to https support

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <!-- OpenGraph -->
         <meta property="og:title" content="Houblon va?" />
         <meta property="og:description" content="Application pour trouver la microbrasserie la plus proche de soi. Par Philippe Lavoie" />
-        <meta property="og:image" content="http://houblonva.philippelavoie.com/img/logo.png"/>
-        <meta property="og:url" content="http://houlbonva.philippelavoie.com" />
+        <meta property="og:image" content="https://houblonva.philippelavoie.com/img/logo.png"/>
+        <meta property="og:url" content="https://houlbonva.philippelavoie.com" />
 
         <!-- Google+ -->
         <meta itemprop="name" content="Houlbon va?">
@@ -89,18 +89,18 @@
                     <div class="float-left footer-column" >
                         <h3>Houblon va?</h3>
                         <ul class="footer-list">
-                            <li><a target="_blank" href="http://www.linkedin.com/in/philippelavoie" >By: Philippe Lavoie</a></li>
+                            <li><a target="_blank" href="https://www.linkedin.com/in/philippelavoie" >By: Philippe Lavoie</a></li>
                             <li><a target="_blank" href="https://github.com/drdeteck/HoublonVa/issues/new" >Bug Report</a></li>
-                            <li><a target="_blank" href="http://dram.philippelavoie.com/" >Other project</a></li>
+                            <li><a target="_blank" href="https://dram.philippelavoie.com/" >Other project</a></li>
                         </ul>
                     </div>
                     <div class="float-left footer-column" >
                         <h3>Technologies</h3>
                         <ul class="footer-list">
-                            <li><a target="_blank" href="http://jquery.com/" >jQuery</a></li>
-                            <li><a target="_blank" href="http://fredhq.com/projects/roundabout" >Roundabout</a></li>
-                            <li><a target="_blank" href="http://twitter.github.com/bootstrap/" >Bootstrap</a></li>
-                            <li><a target="_blank" href="http://glyphicons.com/" >Glyphicons</a></li>
+                            <li><a target="_blank" href="https://jquery.com/" >jQuery</a></li>
+                            <li><a target="_blank" href="https://fredhq.com/projects/roundabout" >Roundabout</a></li>
+                            <li><a target="_blank" href="https://twitter.github.com/bootstrap/" >Bootstrap</a></li>
+                            <li><a target="_blank" href="https://glyphicons.com/" >Glyphicons</a></li>
                         </ul>
                     </div>
                     <div class="float-left footer-column" >
@@ -123,13 +123,13 @@
             <div class="modal-body" style="font-size:17px;">
                 <p>
                     My name is Philippe and I'm from Montréal. 
-                    I'm a scotch amateur since 2011 and I read <strong><a href="http://www.reddit.com/r/scotch">Scotchit</a></strong> since then.
+                    I'm a scotch amateur since 2011 and I read <strong><a href="https://www.reddit.com/r/scotch">Scotchit</a></strong> since then.
                     I went in Scotland for 3 weeks. 
                     There, I visited 6 distilleries and began what I call my bootcamp. 
                 </p>
                 <p>
                     When I came back, I had this idea of creating a reference website to hold the common distilleries and their whisky.
-                    That was a nice way to discover the latest web technologies like <strong><a href="http://twitter.github.com/bootstrap/">Bootstrap</a></strong>
+                    That was a nice way to discover the latest web technologies like <strong><a href="https://twitter.github.com/bootstrap/">Bootstrap</a></strong>
                     and to create something nice where you can find the official tasting notes of the most common whisky.
                 </p>
                 <p>
